# avito_mom_bot

./: .env.example  .gitignore  README.md  bot.py  config.py  pyproject.toml
agents/: run_agent.py  test_scoring.py  vps_agent_tools.py
agents/vps_agent/: config.py  tools.py
database/: crud.py  database.py  errors.py  init_db.py  models.py
docs/: rest_api.md  roles_rbac.md
docs/agents/: agent_design.md  agent_spec.md  implementation_plan.md  llm_integration_and_security.md  pipeline_design.md  user_flow.md
handlers/: active_items.py  add_item.py  base.py  debug.py  errors.py  reports.py
scripts/: backup_db.py  migrate_statuses.py
services/: auth_http.py  avito_client.py  avito_mapper.py  photo_checklist.py  price_estimator.py  reports.py  text_generator.py
tests/: test_auth.py  test_auth_security.py  test_avito_mapper.py  test_bot_errors.py  test_crud.py  test_mappers.py  test_middlewares.py  test_photo_checklist.py  test_price_estimator.py  test_reports.py  test_text_generator.py
utils/: constants.py  filters.py  jwt_tokens.py  middlewares.py  telegram_init_data.py  texts.py
webapp/: index.html
