[project]
name = "avito-mom-bot"
version = "0.1.0"
description = "Telegram-бот помощник для занятых родителей по продаже вещей на Авито."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.3.0",
    "SQLAlchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "safety>=3.0.0"
]
